# RedrawStates

./: .env.sample  .gitignore  Makefile  Process Population.ipynb  README.md  package-lock.json  package.json  pyproject.toml  server.js
public/: index.html  map.html
public/css/: map.css
public/data/: us.json  us2004.json  us2008.json  us2012.json  us2016income.json  us2020-new-pop.json  us2020.json  us2024.-old.json  us2024.json
public/js/: map.js
python/: README.md  grab_from_townhall.py  requirements.txt
redraw/: cli.py  mit.py  nyt.py  nyt2016.py  shared.py
src/redraw/: cli.py  constants.py  mit.py  nyt.py  nyt2016.py  nyt2024.py  shared.py
src/redraw/resources/: ct2022tractcrosswalk.csv
