[tool.poetry]
name = "redraw"
version = "0.1.0"
description = ""
authors = ["Kevin Wilson <khwilson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
aiohttp = "^3.8.5"
cchardet = "^2.1.7"
us = "^2.0.2"
lxml = "^4.6.1"
requests = "^2.25.0"
geopandas = "^0.8.1"
Rtree = "^0.9.4"
census = "^0.8.15"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
isort = "^5.6.4"
black = "^20.8b1"
pylint = "^2.6.0"
ipdb = "^0.13.4"
jupyter = "^1.0.0"
descartes = "^1.1.0"
Rtree = "^0.9.4"
simpledbf = "^0.2.6"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.basic]
good-names = "i,j,k,ex,Run,_,df"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.poetry.scripts]
redraw = "redraw.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
