[project]
name = "redraw"
version = "2024.11.11"
description = "A package to support the Redraw the States project"
readme = "README.md"
authors = [
    { name = "Kevin H Wilson", email = "khwilson@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10.10",
    "census>=0.8.22",
    "click>=8.1.7",
    "faust-cchardet>=2.1.19",
    "geopandas>=1.0.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rtree>=1.3.0",
    "simpledbf>=0.2.6",
    "us>=3.2.0",
]

[project.scripts]
redraw = "redraw.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "matplotlib>=3.9.2",
    "ruff>=0.7.3",
]

[tool.ruff]
line-length = 88  # Max line length
fix = true  # Automatically fix issues

[tool.ruff.lint]
select = ["I"]  # Enable import-related checks (I = import order)
